# rustle

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  rust-toolchain.toml  rustle
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build-image.yml  changelog.yml  ci.yml  docker-image.yml  unit-test.yml
detectors/: Makefile  all_call.cpp  callback.cpp  complex_loop.cpp  div_before_mul.cpp  dup-collection-id.py  ext_call.cpp  ext_call_trait.cpp  inconsistency.py  incorrect-json-type.py  lock-callback.py  near_core.cpp  near_core.h  nep_interface.cpp  nft_approval_check.cpp  nft_owner_check.cpp  non-callback-private.py  non-private-callback.py  prepaid_gas.cpp  promise_result.cpp  public-interface.py  reentrancy.cpp  round.cpp  self_transfer.cpp  storage_gas.cpp  struct_member.cpp  tautology.py  timestamp.cpp  transfer.cpp  unclaimed_storage_fee.cpp  unhandled_promise.cpp  unregistered_receiver.cpp  unsafe-math-toml.py  unsafe_math.cpp  unsaved_changes.cpp  unused-ret.py  upgrade_func.cpp  yocto_attach.cpp
docs/detectors/: README.md  complex-loop.md  div-before-mul.md  dup-collection-id.md  ext-call.md  inconsistency.md  incorrect-json-type.md  (+24 more)
examples/: .gitignore
examples/unsafe-math/: Cargo.toml  expected.csv
examples/unsafe-math/src/: lib.rs
scripts/: generate_expected.sh  unit_test.sh
utils/: README.md  audit.py  batch.py  core.py  findPub.py  findStruct.py  getPackagesName.py  pruneCG.py  requirements.txt
(+125 files in other folders)
