[package]
name = "unsafe-math"
version = "0.1.0"
authors = ["xiyao <futuretech6@foxmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"

[profile.dev]
overflow-checks = false
panic = "abort"

[profile.release]
overflow-checks = false
panic = "abort"
